--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,40 @@ body {
 	background-size: cover;
 	background-position: center bottom;
 	background-image: url(./hannah-wright-OlbCWO7068Y-unsplash.jpg);
+	display: flex;
+	flex-direction: column;
+}
+
+.side-pic-top {
+	flex: 2 1 1px;
+}
+
+.side-pic-bottom {
+	flex: 3 1 1px;
+}
+
+.side-pic-text {
+	background-color: rgba(173, 183, 184, 0.7);
+	color:darkslategray;
+	flex: 0 0 auto;
+}
+
+.side-pic-image-attribution {
+	background-color: rgba(173, 183, 184, 0.7);
+	flex: 0 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.side-pic-image-attribution p {
+	box-sizing: border-box;
+	padding: 5px;
+	margin: 0;
+}
+
+.side-pic-image-attribution a {
+	color:darkslategray;
 }
 
 .signup-form {
